@@ -24,18 +24,17 @@
    <parent>
       <groupId>org.exoplatform.jcr</groupId>
       <artifactId>jcr-parent</artifactId>
-      <version>1.14.8-GA-SNAPSHOT</version>
+      <version>1.15.0-Beta01-SNAPSHOT</version>
    </parent>
    <artifactId>exo.jcr.component.core.impl.infinispan.v5</artifactId>
    <name>eXo JCR :: Component :: Core Service based on ISPN 5</name>
    <description>eXo JCR Service core component based on Infinispan 5</description>
    <properties>
-      <jcr.test.configuration.file>/conf/standalone/test-configuration.xml</jcr.test.configuration.file>
+      <jcr.test.configuration.file>/conf/standalone/test-configuration-ijdbc-ispn.xml</jcr.test.configuration.file>
       <cache.enabled>true</cache.enabled>
       <value.storage.enabled>true</value.storage.enabled>
       <statistics.enabled>false</statistics.enabled>
-      <use.distributed.cache>false</use.distributed.cache>
-      <properties.url.suffix>.properties</properties.url.suffix>
+      <properties.url.suffix>-sjdbc.properties</properties.url.suffix>
       <properties.url.prefix>classpath:/conf/standalone/default</properties.url.prefix>
       <test.cache.all>**/persistent/cache/**</test.cache.all>
       <!-- ispn specific exclude by default -->
@@ -43,9 +42,9 @@
    </properties>
    <dependencies>
       <dependency>
-         <groupId>org.exoplatform.ws</groupId>
-         <artifactId>exo.ws.commons</artifactId>
-         <scope>test</scope>
+        <groupId>org.exoplatform.ws</groupId>
+        <artifactId>exo.ws.commons</artifactId>
+        <scope>test</scope>
       </dependency>
       <dependency>
          <groupId>org.exoplatform.jcr</groupId>
@@ -55,15 +54,11 @@
       <dependency>
          <groupId>org.exoplatform.kernel</groupId>
          <artifactId>exo.kernel.commons.test</artifactId>
-      </dependency>
+      </dependency>     
       <dependency>
          <groupId>org.exoplatform.kernel</groupId>
          <artifactId>exo.kernel.component.ext.rpc.impl.jgroups.v3</artifactId>
-      </dependency>
-      <dependency>
-         <groupId>org.exoplatform.kernel</groupId>
-         <artifactId>exo.kernel.component.ext.cache.impl.infinispan.v5</artifactId>
-      </dependency>
+      </dependency>     
       <dependency>
          <groupId>org.exoplatform.jcr</groupId>
          <artifactId>exo.jcr.component.core</artifactId>
@@ -72,12 +67,12 @@
                <groupId>org.jgroups</groupId>
                <artifactId>jgroups</artifactId>
             </exclusion>
-         </exclusions>
-      </dependency>
+         </exclusions>         
+      </dependency>      
       <dependency>
          <groupId>org.exoplatform.jcr</groupId>
          <artifactId>exo.jcr.component.core</artifactId>
-         <classifier>test-sources</classifier>
+         <classifier>sources</classifier>
          <scope>test</scope>
          <version>${project.version}</version>
          <exclusions>
@@ -85,7 +80,7 @@
                <groupId>org.jgroups</groupId>
                <artifactId>jgroups</artifactId>
             </exclusion>
-         </exclusions>
+         </exclusions>         
       </dependency>
       <dependency>
          <groupId>org.apache.jackrabbit</groupId>
@@ -99,6 +94,43 @@
             </exclusion>
          </exclusions>
       </dependency>
+      <dependency>
+        <groupId>org.exoplatform.core</groupId>
+        <artifactId>exo.core.component.database</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>org.exoplatform.kernel</groupId>
+        <artifactId>exo.kernel.container</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>org.exoplatform.kernel</groupId>
+        <artifactId>exo.kernel.commons</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>org.ow2.spec.ee</groupId>
+        <artifactId>ow2-jta-1.1-spec</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>org.jgroups</groupId>
+        <artifactId>jgroups</artifactId>
+         <version>3.0.0.Final</version>
+      </dependency>
+      <dependency>
+        <groupId>org.exoplatform.kernel</groupId>
+        <artifactId>exo.kernel.component.common</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>jboss.jbossts</groupId>
+        <artifactId>jbossjts</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>javax.jcr</groupId>
+        <artifactId>jcr</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>javax.transaction</groupId>
+        <artifactId>jta</artifactId>
+      </dependency>
       <!-- Excludes jboss-logging-spi since it is in conflict with the
       latest version that is required by infinispan -->
       <dependency>
@@ -109,25 +141,21 @@
                <groupId>org.jboss.logging</groupId>
                <artifactId>jboss-logging-spi</artifactId>
             </exclusion>
-            <exclusion>
-               <groupId>jgroups</groupId>
-               <artifactId>jgroups</artifactId>
-            </exclusion>
          </exclusions>
-      </dependency>
+      </dependency>         
       <!-- TCK binaries and deps for repo stub, some eXo API test -->
       <dependency>
-         <groupId>org.infinispan</groupId>
-         <artifactId>infinispan-core</artifactId>
+        <groupId>org.infinispan</groupId>
+        <artifactId>infinispan-core</artifactId>
       </dependency>
       <dependency>
-         <groupId>org.infinispan</groupId>
-         <artifactId>infinispan-cachestore-jdbc</artifactId>
+        <groupId>org.infinispan</groupId>
+        <artifactId>infinispan-cachestore-jdbc</artifactId>
       </dependency>
       <dependency>
-         <groupId>javax.resource</groupId>
-         <artifactId>connector-api</artifactId>
-         <scope>test</scope>
+        <groupId>javax.resource</groupId>
+        <artifactId>connector-api</artifactId>
+        <scope>test</scope>
       </dependency>
       <!-- ===== Databases JDBC support for tests ===== -->
       <dependency>
@@ -135,8 +163,8 @@
          <artifactId>hsqldb</artifactId>
          <scope>test</scope>
       </dependency>
-   </dependencies>
-   <!-- ======================================================================= -->
+   </dependencies>      
+  <!-- ======================================================================= -->
    <build>
       <resources>
          <resource>
@@ -186,29 +214,26 @@
                   <property>
                      <name>cache-enabled</name>
                      <value>${cache.enabled}</value>
-                  </property>
+                  </property>                  
                   <property>
                      <name>value-storage-enabled</name>
                      <value>${value.storage.enabled}</value>
+                  </property>                  
+                  <property>
+                      <name>JDBCWorkspaceDataContainer.statistics.enabled</name>
+                      <value>${statistics.enabled}</value>
                   </property>
                   <property>
-                     <name>use-distributed-cache</name>
-                     <value>${use.distributed.cache}</value>
+                      <name>exo.properties.url</name>
+                      <value>${properties.url.prefix}${properties.url.suffix}</value>
                   </property>
-                  <property>
-                     <name>JDBCWorkspaceDataContainer.statistics.enabled</name>
-                     <value>${statistics.enabled}</value>
-                  </property>
-                  <property>
-                     <name>exo.properties.url</name>
-                     <value>${properties.url.prefix}${properties.url.suffix}</value>
-                  </property>
-                  <!-- We add this system property due to some incompatibility between IPv6 and some JVM of Linux distributions such as Ubuntu and Fedora -->
+                  <!-- We add this system property due to some incompatibility between IPv6 and 
+						some JVM of Linux distributions such as Ubuntu and Fedora-->
                   <property>
                      <name>java.net.preferIPv4Stack</name>
                      <value>true</value>
                   </property>
-                  <!-- Avoid the firewall -->
+                  <!-- Avoid the firewall -->           
                   <property>
                      <name>jgroups.bind_addr</name>
                      <value>127.0.0.1</value>
@@ -231,8 +256,8 @@
                </excludes>
             </configuration>
          </plugin>
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
+          <plugin>
+             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-dependency-plugin</artifactId>
             <executions>
                <execution>
@@ -256,21 +281,21 @@
                            <classifier>sources</classifier>
                            <type>jar</type>
                            <overWrite>false</overWrite>
-                        </artifactItem>
+                        </artifactItem>                        
                      </artifactItems>
                      <outputDirectory>${project.build.directory}/jcr-core-tests</outputDirectory>
                   </configuration>
                </execution>
             </executions>
-         </plugin>
-         <plugin>
+          </plugin>
+          <plugin>
             <artifactId>maven-antrun-plugin</artifactId>
             <executions>
                <execution>
                   <id>prepare-test-policy</id>
                   <phase>process-test-resources</phase>
                   <configuration>
-                     <tasks>
+                     <target>
                         <echo>Creating Access Policy for tests</echo>
                         <makeurl file="${settings.localRepository}" property="localRepositoryURL" />
                         <makeurl file="${project.build.outputDirectory}" property="outputDirectoryURL" />
@@ -285,7 +310,7 @@
                               <filter token="TEST_CLASSES" value="${testOutputDirectoryURL}" />
                            </filterset>
                         </copy>
-                     </tasks>
+                     </target>
                   </configuration>
                   <goals>
                      <goal>run</goal>
@@ -303,6 +328,7 @@
          <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>taglist-maven-plugin</artifactId>
+            <version>2.4</version>
          </plugin>
          <plugin>
             <groupId>org.codehaus.mojo</groupId>
@@ -339,32 +365,13 @@
                </execution>
             </executions>
          </plugin>
-         <plugin>
-            <artifactId>maven-assembly-plugin</artifactId>
-            <executions>
-               <execution>
-                  <id>jar-with-dependencies</id>
-                  <phase>package</phase>
-                  <goals>
-                     <goal>single</goal>
-                  </goals>
-                  <configuration>
-                     <primaryArtifact>false</primaryArtifact>
-                     <finalName>${project.artifactId}</finalName>
-                     <descriptors>
-                        <descriptor>${basedir}/src/main/assemblies/binary-assembly.xml</descriptor>
-                     </descriptors>
-                  </configuration>
-               </execution>
-            </executions>
-         </plugin>
       </plugins>
    </build>
    <profiles>
-      <!-- *** -->
-      <!-- TCK -->
-      <!-- *** -->
-      <!-- Use "mvn -Prun-tck" to launch only them -->
+    <!-- *** -->
+    <!-- TCK -->
+    <!-- *** -->
+    <!-- Use "mvn -Prun-tck" to launch only them -->
       <profile>
          <id>run-tck</id>
          <build>
@@ -383,20 +390,16 @@
                         <property>
                            <name>emma.coverage.out.file</name>
                            <value>target/emma/coverage.ec</value>
-                        </property>
+                        </property>                
                         <property>
                            <name>cache-enabled</name>
                            <value>${cache.enabled}</value>
-                        </property>
+                        </property>                  
                         <property>
                            <name>value-storage-enabled</name>
                            <value>${value.storage.enabled}</value>
-                        </property>
-                        <property>
-                           <name>use-distributed-cache</name>
-                           <value>${use.distributed.cache}</value>
-                        </property>
-                        <property>
+                        </property>                  
+                         <property>
                            <name>known.issues</name>
                            <value>org.apache.jackrabbit.test.api.version.RestoreTest#testRestoreName
                               org.apache.jackrabbit.test.api.version.RestoreTest#testRestoreOrder2
@@ -418,10 +421,15 @@
                            <name>java.net.preferIPv4Stack</name>
                            <value>true</value>
                         </property>
-                        <!-- Avoid the firewall -->
+                        <!-- Avoid the firewall -->                    
                         <property>
                            <name>jgroups.bind_addr</name>
                            <value>127.0.0.1</value>
+                        </property>
+                        <!-- Need for TCK tests -->
+                        <property>
+                           <name>exo.jcr.allow.closed.session.usage</name>
+                           <value>true</value>
                         </property>
                      </systemProperties>
                      <includes>
@@ -443,10 +451,10 @@
             </plugins>
          </build>
       </profile>
-      <!-- *** -->
-      <!-- ALL -->
-      <!-- *** -->
-      <!-- Use "mvn -Prun-all" to launch default tests and TCK -->
+    <!-- *** -->
+    <!-- ALL -->
+    <!-- *** -->
+    <!-- Use "mvn -Prun-all" to launch default tests and TCK -->
       <profile>
          <id>run-all</id>
          <build>
@@ -456,7 +464,6 @@
                   <artifactId>maven-surefire-plugin</artifactId>
                   <configuration>
                      <!-- TAKE CARE TO UPDATE ALSO run-tck PROFILE -->
-<!--                      <argLine>${env.MAVEN_OPTS} -Dcom.arjuna.ats.arjuna.objectstore.objectStoreDir=${project.build.directory} -Djava.security.manager=org.exoplatform.commons.test.TestSecurityManager -Djava.security.policy=${project.build.directory}/test-classes/test.policy -Xdebug -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=y</argLine> -->
                      <argLine>${env.MAVEN_OPTS} -Dcom.arjuna.ats.arjuna.objectstore.objectStoreDir=${project.build.directory} -Djava.security.manager=org.exoplatform.commons.test.TestSecurityManager -Djava.security.policy=${project.build.directory}/test-classes/test.policy</argLine>
                      <systemProperties>
                         <property>
@@ -466,19 +473,15 @@
                         <property>
                            <name>emma.coverage.out.file</name>
                            <value>target/emma/coverage.ec</value>
-                        </property>
+                        </property>                        
                         <property>
-                           <name>cache-enabled</name>
-                           <value>${cache.enabled}</value>
-                        </property>
+                            <name>cache-enabled</name>
+                            <value>${cache.enabled}</value>
+                        </property>                  
                         <property>
-                           <name>value-storage-enabled</name>
-                           <value>${value.storage.enabled}</value>
-                        </property>
-                        <property>
-                           <name>use-distributed-cache</name>
-                           <value>${use.distributed.cache}</value>
-                        </property>
+                            <name>value-storage-enabled</name>
+                            <value>${value.storage.enabled}</value>
+                        </property>                  
                         <property>
                            <name>known.issues</name>
                            <value>org.apache.jackrabbit.test.api.version.RestoreTest#testRestoreName
@@ -501,10 +504,15 @@
                            <name>java.net.preferIPv4Stack</name>
                            <value>true</value>
                         </property>
-                        <!-- Avoid the firewall -->
+                        <!-- Avoid the firewall -->                    
                         <property>
                            <name>jgroups.bind_addr</name>
                            <value>127.0.0.1</value>
+                        </property>
+                        <!-- Need for TCK tests -->
+                        <property>
+                           <name>exo.jcr.allow.closed.session.usage</name>
+                           <value>true</value>
                         </property>
                      </systemProperties>
                      <includes>
@@ -599,7 +607,7 @@
                <scope>test</scope>
             </dependency>
          </dependencies>
-      </profile>
+      </profile>            
       <profile>
          <id>mysql-5.0</id>
          <properties>
@@ -673,7 +681,7 @@
                <artifactId>db2jcc_license_cu</artifactId>
                <version>9.7</version>
                <scope>test</scope>
-            </dependency>
+            </dependency>            
          </dependencies>
       </profile>
       <profile>
@@ -748,15 +756,22 @@
       <profile>
          <id>sjdbc</id>
          <properties>
-            <jcr.test.configuration.file>/conf/standalone/test-configuration-sjdbc.xml</jcr.test.configuration.file>
+            <jcr.test.configuration.file>/conf/standalone/test-configuration-sjdbc-ispn.xml</jcr.test.configuration.file>
             <properties.url.suffix>-sjdbc.properties</properties.url.suffix>
          </properties>
-      </profile>
+      </profile>      
+      <profile>
+         <id>ijdbc</id>
+         <properties>
+            <jcr.test.configuration.file>/conf/standalone/test-configuration-ijdbc-ispn.xml</jcr.test.configuration.file>
+            <properties.url.suffix>-sjdbc.properties</properties.url.suffix>
+         </properties>
+      </profile> 
       <profile>
          <id>cluster</id>
          <properties>
-            <jcr.test.configuration.file>/conf/standalone/cluster/test-configuration.xml</jcr.test.configuration.file>
+            <jcr.test.configuration.file>/conf/standalone/cluster/test-configuration-ijdbc-ispn.xml</jcr.test.configuration.file>
          </properties>
-      </profile>
+      </profile>      
    </profiles>
 </project>
